Use KStringHandler::preProcessWrap() when calculating the width of a file name in DolphinFileItemDelegate. This makes sure that zero width spaces (which prevent kerning) are added at the same places where KFileItemDelegate adds them when actually rendering the name. Fixes the problem that file names are elided and partly replaced by "..." even though there is enough space for the full name.

BUG: 251121
FIXED-IN: 4.5.2

svn path=/branches/KDE/4.5/kdebase/apps/; revision=1179569