src/dolphinfileitemdelegate.cpp
@@ -23,6 +23,7 @@
 #include <kfileitem.h>
 #include <kicon.h>
 #include <kiconloader.h>
+#include <kstringhandler.h>
 
 #include <QAbstractItemModel>
 #include <QAbstractProxyModel>
@@ -82,7 +83,7 @@ void DolphinFileItemDelegate::paint(QPainter* painter,
 int DolphinFileItemDelegate::nameColumnWidth(const QString& name, const QStyleOptionViewItem& option)
 {
     QFontMetrics fontMetrics(option.font);
-    int width = option.decorationSize.width() + fontMetrics.width(name) + 16;
+    int width = option.decorationSize.width() + fontMetrics.width(KStringHandler::preProcessWrap(name)) + 16;
 
     const int defaultWidth = option.rect.width();
     if ((defaultWidth > 0) && (defaultWidth < width)) {
